crates/jsonschema-macros/tests/ui/invalid_type_unknown_name.stderr
error: Unexpected type
 --> tests/ui/invalid_type_unknown_name.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"type":"bogus"}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
